tests/valid/test2.wf
a = TRUE;
b = FALSE;
c = (a OR b) AND NOT (b OR FALSE);
print(c);
