tests/invalid/error8.wf
a = NOT 0;
print(a);
